<resources>
    <string name="app_name">Reks</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="welcome_please_sign_in_to_continue">Welcome, Please Sign in to Continue.</string>
    <string name="title_activity_homepage">homepage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_loan_details">ScrollingActivity</string>
    <string-array name="dependents_options">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3+</item>
    </string-array>

    <string-array name="property_options">
        <item>Urban</item>
        <item>Semiurban</item>
        <item>Rural</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="married">Married</string>
    <string name="dependents">Dependents</string>
    <string name="education">Education</string>
    <string name="graduate">Graduate</string>
    <string name="not_graduate">Not Graduate</string>
    <string name="self_employed">Self Employed</string>
    <string name="applicant_income">Applicant Income (+00)</string>
    <string name="co_applicant_income">Co-Applicant Income (+00)</string>
    <string name="loan_amount">Loan Amount (100k)</string>
    <string name="loan_amount_term">Loan Amount Term (Months)</string>
    <string name="credit_history">Credit History</string>
    <string name="property_area">Property Area</string>
    <string name="number_of_bathrooms_5_for_bathrooms_without_a_shower">Number of Bathrooms (.5 for bathrooms without a shower)</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="number_of_bathrooms_5_for_just_bathrooms">Number of Bathrooms (.5 for just bathrooms)</string>
    <string name="interior_square_feet">Interior Square Feet</string>
    <string name="total_land_square_feet">Total Land Square Feet</string>
    <string name="number_of_floors">Number of Floors</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="waterfront_view">Waterfront View</string>
    <string name="date">Date (yyyy-mm-dd)</string>
    <string name="quality_of_the_view">Quality of the View</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="awful">1</string>
    <string name="bad">2</string>
    <string name="fine">3</string>
    <string name="good">4</string>
    <string name="great">5</string>
    <string name="grade_of_house_0_13">Grade Of House (0-13)</string>
    <string name="basement_sqft">Square Feet in Basement</string>
    <string name="year_of_construction">Year of Construction (yyyy)</string>
    <string name="condition_of_the_property">Condition Of the Property</string>
    <string name="last_renovation_yyyy">Last Renovation (yyyy)</string>
    <string name="address_zipcode">Address Zipcode</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="average_interior_square_feet_of_15_closest_neighbours">Average Interior Square Feet of 15 closest Neighbours</string>
    <string name="total_square_feet_of_15_closest_neighbour_s_lot">Total Square Feet of 15 closest Neighbour\'s Lot</string>
    <string name="square_feet_above_ground_floors">Square Feet above ground floors</string>
    <string name="select_house_location">Select House Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="feedback_review"><![CDATA[Feedback & Review]]></string>
    <string name="application_results">Application Results</string>
    <string name="username">username</string>
    <string name="useremail">userEmail</string>
    <string name="log_out">Log out</string>
    <string name="loan_application">Loan Application</string>
    <string name="house_application">House Application</string>
    <string name="support_forms">Support Forms</string>
    <string name="live_chat_support">Live Chat Support</string>
    <string name="about_us">About Us</string>
    <string name="loan_officer_details">Prediction Officer Payment</string>
    <string name="todo">TODO</string>
    <string name="apllication_results">AI Prediction Results</string>
</resources>